fix math overflow

--- a/main.css
+++ b/main.css
@@ -407,7 +407,8 @@ img {
 }
 
 div.math {
-    overflow: auto;
+    overflow-x: auto;
+    overflow-y: hidden;
     margin-top: 1.5rem;
 }
 .katex {
